# SHIRO

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  clang-format-fix.sh  clang-format.sh  clang-tidy-fix.sh  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  report-user.md
.github/workflows/: lint.yml  tag-release.yml
SHIRO/bootloader/: CMakeLists.txt  README.md  heya.h
SHIRO/bootloader/automated/: clang-format-fix.sh  clang-tidy-fix.sh
SHIRO/bootloader/cmake/: toolchain.cmake
SHIRO/bootloader/include/crt/: crt1.h  crtbegin.h  crtend.h  crti.h  crtn.h
SHIRO/bootloader/include/efi/: types.h
SHIRO/bootloader/src/bootloader/: CMakeLists.txt  main.c
SHIRO/bootloader/src/clib/: CMakeLists.txt
SHIRO/bootloader/src/crt/: CMakeLists.txt  crt1.c  crtbegin.c  crtend.c  crti.asm  crtn.asm
SHIRO/bootloader/src/shimloader/: CMakeLists.txt  main.c
SHIRO/docs/: README.md  maintain_note.md  maintainers_note.md  repo.md  style.md
SHIRO/userspace/: .clang-tidy
automated/: clang-format-fix.sh  clang-format.sh  clang-tidy-fix.sh  clang-tidy.sh  print_all_crt_location.sh
cmake/: common.cmake
cmake/toolchains/: coff.cmake  efi.cmake  elf.cmake  generic.cmake  standalone.cmake
include/SHIRO/: stdlib.h  xmm_macro.asm.inc
include/SHIRO/common/: common_string.h
include/SHIRO/common/string/: common_string.h
src/SHIRO/bootloader/: CMakeLists.txt  bootloader.asm  run.sh  run.sh.in
src/SHIRO/common/: CMakeLists.txt  _start.asm  common_string.cpp
src/SHIRO/crt/: CMakeLists.txt
src/SHIRO/crt/coff/: crt0.asm  crtbegin.asm  crtend.asm  crti.asm  crtn.asm  crtnormalize.asm  crtsave.asm
src/SHIRO/crt/common/: crt0.asm  crti.asm  crtn.asm
src/SHIRO/crt/efi/: crtexit.asm  crtinit.asm
src/SHIRO/crt/elf/: crt0.asm  crtbegin.asm  crtend.asm  crti.asm  crtn.asm  crtnormalize.asm  crtsave.asm
src/SHIRO/crt/min/: crt0.asm
src/SHIRO/fallback_bootloader/: CMakeLists.txt  fallback.asm  fallback.c  fallback.cpp
src/SHIRO/libc/: CMakeLists.txt
src/bootloader/: bootloader.asm  fallback.asm
